fixed process line on mobile in HowDoesItWork Component

--- a/src/components/Speakers/HowDoesItWork/HowDoesItWork.styled.css
+++ b/src/components/Speakers/HowDoesItWork/HowDoesItWork.styled.css
@@ -3,9 +3,76 @@
 }
 
 .step{
-    padding: 9px;
+    padding: 9px 9px 9px 20px;
+    position: relative;
+}
+
+
+.step:before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 1px solid theme("colors.customRed");
+    height: 100%;
+}
+
+.step:nth-child(1):before{
+    top: 10px;
+}
+
+.step:nth-last-child(1):before{
+    top: -20px;
+}
+
+.step:after{
+    content: '';
+    position: absolute;
+    left: -2px;
+    background: #E62B1E;
+    border-radius: 6px;
+    height: 6px;
+    width: 6px;
+    top: calc(50% + 1px);
+    transform: translateY(-50%);
+}
+
+.step:nth-child(1):after{
+    top: calc(50% - 4px);
 }
 
 .step:nth-child(1){
     padding-top: 0;
+}
+
+.step .dot-element{
+    position: absolute;
+    left: -8px;
+    top: calc(50% - 13px);
+    height: 18px;
+    width: 18px;
+    background: #FDE8E6;
+    border-radius: 10px;
+}
+
+.step .dot-element-two{
+    position: absolute;
+    left: -8px;
+    top: calc(50% - 8px);
+    height: 18px;
+    width: 18px;
+    background: #FDE8E6;
+    border-radius: 10px;
+}
+
+.step .dot-element-two:after{
+    content: '';
+    position: absolute;
+    height: 24px;
+    width: 24px;
+    background: #FDE8E6;
+    top: -3px;
+    left: -3px;
+    opacity: 0.4;
+    border-radius: 10px;
 }
